Fix :  Fix title section alignments to make it identical to the remaining recipe pages

--- a/styles.css
+++ b/styles.css
@@ -73,9 +73,9 @@ h1,h2 {
 }
 
 .RecipeTitle {
-    display: inline-block;
     font-size: 64px;
-    margin-inline-start: 400px;
+    margin-inline-start: 300px;
+      display: inline-block;
     margin-bottom: 10px;
 }
 
